<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cart">My Cart</string>
    <string name="action_clear">Clear All</string>
    <string name="app_name">MyClean</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_add_to_cart">Book Now</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_continue_shopping">Continue Shopping</string>
    <string name="btn_edit_profile">EDIT YOUR PROFILE</string>
    <string name="btn_out_of_stock">NOT AVAILABLE</string>
    <string name="btn_process_checkout">CONFIRM BOOKING</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkout_add_comment">Voucher</string>
    <string name="checkout_address">Address</string>
    <string name="checkout_dialog_msg">Are you sure want to checkout?</string>
    <string name="checkout_dialog_title">Process Checkout</string>
    <string name="checkout_email">IC Number</string>
    <string name="checkout_fill_form">please complete fill the form first!</string>
    <string name="checkout_invalid_voucher">Invalid Voucher</string>
    <string name="checkout_option_ok">OK</string>
    <string name="checkout_order_list">Order Detail</string>
    <string name="checkout_phone_number">Phone Number</string>
    <string name="checkout_shipping">Online Banking</string>
    <string name="checkout_submit_msg">Submit your order…</string>
    <string name="checkout_submit_title">Please wait</string>
    <string name="checkout_success_msg">Your booking will be confirmed. Our customer service will contact you shortly.</string>
    <string name="checkout_success_title">Thank you for your order</string>
    <string name="checkout_valid_voucher">Voucher Applied!</string>
    <string name="checkout_your_name">Your Name</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
    <string name="clear_one_order">Do you want to clear this order?</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirmation</string>
    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="default_your_address" />
    <string name="default_your_email" />
    <string name="default_your_name" />
    <string name="default_your_phone" />
    <string name="define_roundedimageview" />
    <string name="dialog_option_add">Add</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_no">No</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="dialog_settings">GOTO SETTINGS</string>
    <string name="download_msg">Downloading…</string>
    <string name="download_success">Image has been downloaded and saved on gallery.</string>
    <string name="empty_cart">Whoops, your cart is empty</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_fetch_data">Could not fetch the data! Pleas try again.</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="loading_msg">Please Wait…</string>
    <string name="location_not_available_message">"Looks like this app doesn't have location services configured. Please see OneSignal docs for more information."</string>
    <string name="location_not_available_open_settings_message">You have previously denied sharing your device location. Please go to settings to enable.</string>
    <string name="location_not_available_open_settings_option">Settings</string>
    <string name="location_not_available_title">Location Not Available</string>
    <string name="msg_copy">Purchase code copied</string>
    <string name="msg_empty_cart">Your cart is empty!</string>
    <string name="msg_exit">Press again to exit app</string>
    <string name="msg_no_history">Your order history is empty!</string>
    <string name="msg_stock_below_0">Minimum 1 hour</string>
    <string name="msg_stock_not_enough">Maximum of 8 hours</string>
    <string name="msg_success_add_cart">Successfully add Booking to cart</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="next">Next</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="no_order_menu">No order</string>
    <string name="number_order">Number of hours :</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_msg">Need Permissions</string>
    <string name="permission_storage">This app needs access storage to download the image</string>
    <string name="pref_group_profile">PROFILE</string>
    <string name="pref_msg_invalid_address">Invalid Address Input</string>
    <string name="pref_msg_invalid_email">Invalid Email Input</string>
    <string name="pref_msg_invalid_name">Invalid Name Input</string>
    <string name="pref_msg_invalid_phone">Invalid Phone Input</string>
    <string name="pref_title_address">Address</string>
    <string name="pref_title_email">IC Number</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_title_phone">Phone Number</string>
    <string name="previous">Previous</string>
    <string name="privacy_policy_url">\#</string>
    <string name="search_menu_title">Search</string>
    <string name="search_query_text">Search…</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="share_app">I Would like to share this MyClean App with you. Here You Can Download This Application from PlayStore</string>
    <string name="share_product_section_one">Find</string>
    <string name="txt_profile_history">Order History</string>
    <string name="txt_profile_rate">Rate Us</string>
    <string name="txt_profile_share">Share</string>
</resources>