<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/lyt_root" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/btn_edit_user">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:id="@id/txt_user_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="User Name" />
            <TextView android:id="@id/txt_user_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="user.email@gmail.com" />
            <TextView android:textSize="13.0sp" android:id="@id/txt_user_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="\ 08123456789" />
            <TextView android:id="@id/txt_user_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="Collins Street West Victoria 8007 Australia, Envato HQ: 121 King Street, Melbourne Victoria 3000 Australia" />
        </LinearLayout>
        <com.balysv.materialripple.MaterialRippleLayout android:id="@id/btn_edit_user" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" app:mrl_rippleAlpha="0.2" app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleHover="true" app:mrl_rippleOverlay="true">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_edit_profile" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </RelativeLayout>
    <include layout="@layout/include_row_separator" />
    <com.balysv.materialripple.MaterialRippleLayout android:id="@id/btn_order_history" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mrl_rippleAlpha="0.2" app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleHover="true" app:mrl_rippleOverlay="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_order_history" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/txt_profile_history" />
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
    <include layout="@layout/include_row_separator" />
    <com.balysv.materialripple.MaterialRippleLayout android:id="@id/btn_rate" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mrl_rippleAlpha="0.2" app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleHover="true" app:mrl_rippleOverlay="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_other_rate" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/txt_profile_rate" />
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
    <include layout="@layout/include_row_separator" />
    <com.balysv.materialripple.MaterialRippleLayout android:id="@id/btn_share" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mrl_rippleAlpha="0.2" app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleHover="true" app:mrl_rippleOverlay="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_share_grey" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/txt_profile_share" />
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
    <include layout="@layout/include_row_separator" />
    <com.balysv.materialripple.MaterialRippleLayout android:id="@id/btn_privacy" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:mrl_rippleAlpha="0.2" app:mrl_rippleColor="@color/ripple_color" app:mrl_rippleHover="true" app:mrl_rippleOverlay="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </com.balysv.materialripple.MaterialRippleLayout>
    <include layout="@layout/include_row_separator" />
</LinearLayout>